Survive rate: male/female

--- a/titanic-challange.ipynb
+++ b/titanic-challange.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -1143,7 +1143,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,81 +1158,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "891"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(p)\n",
-    "p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "__call__() takes from 1 to 2 positional arguments but 3 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-31-4b0b497fce08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mrow_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"Age\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mrow_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#     print(row_data['Age'])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: __call__() takes from 1 to 2 positional arguments but 3 were given"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "891\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "for i in range(len(p)):\n",
-    "    row_data = p.iloc(i, [\"Age\"])\n",
-    "    print (row_data)\n",
-    "#     print(row_data['Age'])\n",
-    "\n",
-    "    #     sex_i = 0 if row_data['Sex'] == \"male\" else 1    \n",
-    "#     age_i = row_data['Age'] \n",
-    "#     cabin_i = 0 if not row_data['Cabin'] else lne(row_data['Cabin'])\n",
-    "    \n",
-    "#     if not age_i:\n",
-    "#         age_i = 30\n",
-    "    \n",
-    "#     print (sex_i, age_i, cabin_i)\n",
-    "    \n",
-    "    "
+    "N = len(p)\n",
+    "# サンプルデータの長さ\n",
+    "print(N)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Survived': 1, 'Parch': 7, 'Name': 3, 'Fare': 9, 'Cabin': 10, 'Age': 5, 'PassengerId': 0, 'Pclass': 2, 'SibSp': 6, 'Sex': 4, 'Embarked': 11, 'Ticket': 8}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Keyデータ\n",
+    "keys = {}\n",
+    "for i, key in enumerate(p):\n",
+    "    keys[key] = i\n",
+    "    print(keys)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "male  \tnum:577\t survive_rate:0.189\n",
+      "female \tnum:314\t survive_rate:0.742\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 女性と男性の違いをみる\n",
+    "female_sum = 0\n",
+    "female_num = 0\n",
+    "male_sum = 0\n",
+    "male_num = 0\n",
+    "\n",
+    "for i in range(N):\n",
+    "    d = p.iloc[i]\n",
+    "    if d['Sex'] == 'male':\n",
+    "        male_num += 1\n",
+    "        male_sum += d['Survived']\n",
+    "    if d['Sex'] == 'female':\n",
+    "        female_num += 1\n",
+    "        female_sum += d['Survived']\n",
+    "        \n",
+    "print (\"male  \\tnum:{0}\\t survive_rate:{1:.3f}\".format(male_num, male_sum*1.0 / male_num))\n",
+    "print (\"female \\tnum:{0}\\t survive_rate:{1:.3f}\".format(female_num, female_sum*1.0 / female_num))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----\n",
+    "\n",
+    "- 男性の生還率: 19%\n",
+    "- 女性の生還率: 74%\n",
+    "\n",
+    "男女別にやった時点で、女性の生還率がめちゃくちゃ高いことがわかった。\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
