Survive rate: PClass.

--- a/titanic-challange.ipynb
+++ b/titanic-challange.ipynb
@@ -1158,19 +1158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "891\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N = len(p)\n",
     "# サンプルデータの長さ\n",
@@ -1178,31 +1170,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Survived': 1, 'Parch': 7, 'Name': 3, 'Fare': 9, 'Cabin': 10, 'Age': 5, 'PassengerId': 0, 'Pclass': 2, 'SibSp': 6, 'Sex': 4, 'Embarked': 11, 'Ticket': 8}\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Keyデータ\n",
-    "keys = {}\n",
-    "for i, key in enumerate(p):\n",
-    "    keys[key] = i\n",
-    "    print(keys)"
+    "## まずはデータをなんとなく眺めてみる\n",
+    "\n",
+    "### 男女別の生還率の違い"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1213,28 +1191,23 @@
      "output_type": "stream",
      "text": [
       "male  \tnum:577\t survive_rate:0.189\n",
-      "female \tnum:314\t survive_rate:0.742\n"
+      "female  \tnum:314\t survive_rate:0.742\n"
      ]
     }
    ],
    "source": [
     "# 女性と男性の違いをみる\n",
-    "female_sum = 0\n",
-    "female_num = 0\n",
-    "male_sum = 0\n",
-    "male_num = 0\n",
+    "import collections\n",
+    "num_c = collections.Counter()\n",
+    "survived_c = collections.Counter()\n",
     "\n",
     "for i in range(N):\n",
     "    d = p.iloc[i]\n",
-    "    if d['Sex'] == 'male':\n",
-    "        male_num += 1\n",
-    "        male_sum += d['Survived']\n",
-    "    if d['Sex'] == 'female':\n",
-    "        female_num += 1\n",
-    "        female_sum += d['Survived']\n",
-    "        \n",
-    "print (\"male  \\tnum:{0}\\t survive_rate:{1:.3f}\".format(male_num, male_sum*1.0 / male_num))\n",
-    "print (\"female \\tnum:{0}\\t survive_rate:{1:.3f}\".format(female_num, female_sum*1.0 / female_num))"
+    "    num_c[d['Sex']] += 1\n",
+    "    survived_c[d['Sex']] += d['Survived']\n",
+    "    \n",
+    "print (\"male  \\tnum:{0}\\t survive_rate:{1:.3f}\".format(num_c['male'], survived_c['male']*1.0 / num_c['male']))\n",
+    "print (\"female  \\tnum:{0}\\t survive_rate:{1:.3f}\".format(num_c['female'], survived_c['female']*1.0 / num_c['female']))"
    ]
   },
   {
@@ -1254,6 +1227,50 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Pclassでの違い"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class 1: 0.630\n",
+      "Class 2: 0.473\n",
+      "Class 3: 0.242\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pclass\n",
+    "import collections\n",
+    "num_c = collections.Counter()\n",
+    "survived_c = collections.Counter()\n",
+    "\n",
+    "for i in range(N):\n",
+    "    d = p.iloc[i]\n",
+    "    num_c[d['Pclass']] += 1\n",
+    "    survived_c[d['Pclass']] += d['Survived']\n",
+    "    \n",
+    "for k, v in num_c.items():\n",
+    "    print(\"Class {0}: {1:.3f}\".format(k, survived_c[k]/v))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
