[WIP] Average: Age

--- a/titanic-challange.ipynb
+++ b/titanic-challange.ipynb
@@ -1266,6 +1266,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan 891\n",
+      "Average(Age) = nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 基本データ\n",
+    "age = 0\n",
+    "age_num = 0\n",
+    "\n",
+    "for i in range(N):\n",
+    "    d = p.iloc[i]\n",
+    "    if d['Age'] is not None:\n",
+    "        age += d['Age']\n",
+    "        age_num += 1\n",
+    "        \n",
+    "print (age, age_num)\n",
+    "        \n",
+    "print(\"Average(Age) = {}\".format(age / age_num))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 機械学習してみる\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "conditions = []\n",
+    "survived = []\n",
+    "\n",
+    "\n",
+    "for i in range(N):\n",
+    "    d = p.iloc[i]\n",
+    "\n",
+    "    # データを数値化\n",
+    "    \n",
+    "    sex = 0 \n",
+    "    if d['Sex'] == 'male':\n",
+    "        sex = 1\n",
+    "    if d['Sex'] == 'famale':\n",
+    "        sex = 2\n",
+    "        \n",
+    "    \n",
+    "        \n",
+    "#     condition = \n",
+    "    \n",
+    "#     PassengerId\tSurvived\tPclass\tName\tSex\tAge\tSibSp\tParch\tTicket\tFare\tCabin\tEmbarked\n",
+    "#     num_c[d['Sex']] += 1\n",
+    "    \n",
+    "    \n",
+    "#     survived_c[d['Sex']] += d['Survived']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
