--- a/machine-learning-challange.ipynb
+++ b/machine-learning-challange.ipynb
@@ -825,7 +825,8 @@
    "cell_type": "code",
    "execution_count": 63,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -964,6 +965,18 @@
    "source": [
     "print(c_df[:harf].sum())\n",
     "c_df[harf:].describe()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## TODO\n",
+    "\n",
+    "+ ランダムサンプリング/クラスタリング->サンプリングで今までやった手法で違いを確認\n",
+    "+ 使うパラメータの変更を考える"
    ]
   },
   {
