--- a/machine-learning-challange.ipynb
+++ b/machine-learning-challange.ipynb
@@ -385,7 +385,7 @@
     "]\n",
     "\n",
     "predict_value = 'Survived'\n",
-    "c_df = patsy.dmatrix('+ '.join(exp_values) + ' + ' + predict_value, data=titanic_c, return_type='dataframe')\n",
+    "c_df = patsy.dmatrix('+ '.join(exp_values) +, data=titanic_c, return_type='dataframe')\n",
     "c_df.groupby(predict_value).count()"
    ]
   },
@@ -990,8 +990,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1005,7 +1006,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
