Check female3 adult data.

--- a/6_devide_model.ipynb
+++ b/6_devide_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -94,7 +94,7 @@
        "1      0   PC 17599  71.2833   C85        C  False    False  False  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,6 +455,206 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Survived</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HasParch</th>\n",
+       "      <th>HasSib</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">False</th>\n",
+       "      <th>False</th>\n",
+       "      <td>0.444444</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">True</th>\n",
+       "      <th>False</th>\n",
+       "      <td>0.384615</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Survived      \n",
+       "                     mean count\n",
+       "HasParch HasSib                \n",
+       "False    False   0.444444    54\n",
+       "         True    0.500000     2\n",
+       "True     False   0.384615    13\n",
+       "         True    0.333333     3"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f_group = titanic[(titanic['Sex'] == \"female\") & (titanic['Pclass'] == 3) & (titanic['Child'] == False)]\n",
+    "# len(f_group) 72\n",
+    "\n",
+    "f_group.groupby(['HasParch', 'HasSib'])[['Survived']].agg(['mean', 'count']) # 全然変化なし。。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">PassengerId</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Pclass</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Age</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">SibSp</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Parch</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Fare</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Survived</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>443.463415</td>\n",
+       "      <td>41</td>\n",
+       "      <td>3</td>\n",
+       "      <td>41</td>\n",
+       "      <td>29.304878</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0.609756</td>\n",
+       "      <td>41</td>\n",
+       "      <td>1.073171</td>\n",
+       "      <td>41</td>\n",
+       "      <td>16.743802</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>347.741935</td>\n",
+       "      <td>31</td>\n",
+       "      <td>3</td>\n",
+       "      <td>31</td>\n",
+       "      <td>25.935484</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.419355</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.645161</td>\n",
+       "      <td>31</td>\n",
+       "      <td>11.679971</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         PassengerId       Pclass              Age           SibSp        \\\n",
+       "                mean count   mean count       mean count      mean count   \n",
+       "Survived                                                                   \n",
+       "0         443.463415    41      3    41  29.304878    41  0.609756    41   \n",
+       "1         347.741935    31      3    31  25.935484    31  0.419355    31   \n",
+       "\n",
+       "             Parch             Fare        \n",
+       "              mean count       mean count  \n",
+       "Survived                                   \n",
+       "0         1.073171    41  16.743802    41  \n",
+       "1         0.645161    31  11.679971    31  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f_group.groupby(\"Survived\")[['PassengerId', 'Pclass', 'Age', 'SibSp', 'Parch', 'Fare', 'Embarked']].agg([\"mean\", \"count\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "あまり有用なデータがない・・・"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -466,9 +666,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -480,7 +680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
