--- a/4_sampling.ipynb
+++ b/4_sampling.ipynb
@@ -16,11 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/piyopiyo/.pyenv/versions/anaconda3-4.2.0/lib/python3.5/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -95,7 +103,7 @@
        "1      0   PC 17599  71.2833   C85        C  False  "
       ]
      },
-     "execution_count": 334,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -259,7 +267,7 @@
        "1               0.0               0.0               0.0       1.0  "
       ]
      },
-     "execution_count": 335,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -289,7 +297,7 @@
        " 'C(Embarked)[T.S]']"
       ]
      },
-     "execution_count": 336,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -386,7 +394,7 @@
        "C(Embarked)[T.S]  328.0  226.0"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,6 +408,8 @@
     "                                                                                        random_state=0)\n",
     "\n",
     "print(len(X_train), len(X_test))\n",
+    "\n",
+    "train_user = set(X_train.index)\n",
     "\n",
     "training_titanic = titanic.query('PassengerId in @train_user')\n",
     "test_titanic = titanic.query('PassengerId not in @train_user')\n",
